--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </script>
     <style>
       body {
-        font-family: 'Nanum Gothic', Monospace;
+        font-family: Tahoma, Geneva, sans-serif;
         background-color: black;
         color: white;
         margin: 0px;
