add head infomation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <title>Hello, Korea!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">    
+    <meta property="og:title" content="BTCKorea.org">
+    <meta property="og:description" content="국내 비트코인 실시간 차트 및 거래 정보">
+    <meta name="description" content="국내 비트코인 실시간 차트 및 거래 정보">
+    <meta property="og:image" content="https://dl.dropboxusercontent.com/u/5736215/btckorea.png">
+    <meta property="og:site_name" content="BTCKorea.org">
+    <meta property="og:url" content="http://BTCKorea.org">
+    
     <link rel="stylesheet" type="text/css" href="index.css">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="underscore.js"></script>
