--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       }(document, 'script', 'facebook-jssdk'));
     </script>
 
-    <div class="fb-like" data-href="http://www.btckorea.org" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true" data-colorscheme="dark"  align="right"></div>
+    <div class="fb" align="right"><div class="fb-like" data-href="http://www.btckorea.org" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true" data-colorscheme="dark"></div></div>
     <table id="min_max">
       <thead>
         <tr>
