add description tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <meta property="og:url" content="http://www.btckorea.org">
     <meta property="og:type"   content="website" /> 
     <meta property="fb:app_id" content="683455885058190" /> 
-
+    <meta property="og:description" content="비트코인 국내 거래소 실시간 차트 및 거래 기록 보기" >
+    <meta name="description" content="비트코인 국내 거래소 실시간 차트 및 거래 기록 보기" >
+    
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
