changed description tag

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:url" content="http://www.btckorea.org">
     <meta property="og:type"   content="website" /> 
     <meta property="fb:app_id" content="683455885058190" /> 
-    <meta property="og:description" content="비트코인 국내 거래소 실시간 차트 및 거래 기록 보기" >
-    <meta name="description" content="비트코인 국내 거래소 실시간 차트 및 거래 기록 보기" >
+    <meta property="og:description" content="최근 국내에서 거래된 비트코인 가격과 실시간 차트를 볼 수 있습니다. 모바일 호환됩니다." >
+    <meta name="description" content="최근 국내에서 거래된 비트코인 가격과 실시간 차트를 볼 수 있습니다. 모바일 호환됩니다." >
     
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes">
