server domain change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="res/underscore.js"></script>
     <script type="text/javascript" src="res/moment-with-langs.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
-    <script type="text/javascript" src="http://j96.me:8888/faye/client.js"></script>
+    <script type="text/javascript" src="http://www.btckorea.org:8888/faye/client.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="res/chart_data.js"></script>
     <script type="text/javascript" src="res/realtime-table.js"></script>
