--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!--<textarea id="log" style="width:700;height:300;"></textarea>-->
 
     <div class="footer">
-      Copyright 2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a> <a href="mailto:jjangg96@bitple.com">(jjangg96)</a>
+      Copyright(c)2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <a href="mailto:jjangg96@bitple.com">jjangg96</a>
     </div>
   </body>
 </html>
