--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">    
 
+    <meta property="og:site_name" content="www.btckorea.org">
     <meta property="og:title" content="비트코인 국내 거래소 실시간 차트 및 거래 기록">
     <meta property="og:image" content="https://dl.dropboxusercontent.com/u/5736215/btckorea.png">
     <meta property="og:url" content="http://www.btckorea.org">
     <meta property="og:type"   content="website" /> 
     <meta property="fb:app_id" content="683455885058190" /> 
-    <meta property="og:description" content="최근 국내에서 거래된 비트코인 가격과 실시간 차트를 볼 수 있습니다. 모바일 호환됩니다." >
-    <meta name="description" content="최근 국내에서 거래된 비트코인 가격과 실시간 차트를 볼 수 있습니다. 모바일 호환됩니다." >
+    <meta property="og:description" content="최근 국내에서 거래된 비트코인 가격 목록과 실시간 차트를 볼 수 있습니다. 모바일에서도 이용 가능합니다." >
+    <meta name="description" content="최근 국내에서 거래된 비트코인 가격 목록과 실시간 차트를 볼 수 있습니다. 모바일에서도 이용 가능합니다." >
     
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes">
