--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <meta property="og:site_name" content="www.btckorea.org">
     <meta property="og:title" content="비트코인 국내 거래소 실시간 차트 및 거래 기록">
     <meta property="og:image" content="https://dl.dropboxusercontent.com/u/5736215/btckorea.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:url" content="http://www.btckorea.org">
     <meta property="og:type"   content="website" /> 
     <meta property="fb:app_id" content="683455885058190" /> 
     <meta property="og:description" content="최근 국내에서 거래된 비트코인 가격 목록과 실시간 차트를 볼 수 있습니다. 모바일에서도 이용 가능합니다." >
     <meta name="description" content="최근 국내에서 거래된 비트코인 가격 목록과 실시간 차트를 볼 수 있습니다. 모바일에서도 이용 가능합니다." >
-    
+
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
