--- a/index.html
+++ b/index.html
@@ -42,50 +42,64 @@
     <script type="text/javascript" src="res/realtime-table.js"></script>
   </head>
   <body>
-    <script type="text/javascript" src="res/chart.js"></script>
-    <div id="fb-root"></div>
-    <script>
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&appId=683455885058190&version=v2.0";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
+    <a href="http://wp.me/P4fds6-1gR" target="_blank"><img class="top_banner" src="res/bitpremiers_event.jpg"></img></a>
+  <script type="text/javascript" src="res/chart.js"></script>
+  <div id="fb-root"></div>
+  <script>
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&appId=683455885058190&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
 
-    <div class="fb" align="right"><div class="fb-like" data-href="http://www.btckorea.org" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true" data-colorscheme="dark"></div></div>
-    <table id="min_max">
-      <thead>
-        <tr>
-          <td>최저가</td>
-          <td>최고가</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr></tr>
-      </tbody>
-    </table>
+  <div class="fb" align="right"><div class="fb-like" data-href="http://www.btckorea.org" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true" data-colorscheme="dark"></div></div>
+  <table id="min_max">
+    <thead>
+      <tr>
+        <td>최저가</td>
+        <td>최고가</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr></tr>
+    </tbody>
+  </table>
 
-    <table id="history">
-      <thead>
-        <tr>
-          <td>Time</td>
-          <td id="price">Last Price</td>
-          <td id="bitstamp">Bitstamp</td>
-          <td id="volume">Qty</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr id="list">
-        </tr>
-      </tbody>
+  <table id="history">
+    <thead>
+      <tr>
+        <td>Time</td>
+        <td id="price">Last Price</td>
+        <td id="bitstamp">Bitstamp</td>
+        <td id="volume">Qty</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr id="list">
+      </tr>
+    </tbody>
 
-    </table>
-    <!--<textarea id="log" style="width:700;height:300;"></textarea>-->
+  </table>
+  <!--<textarea id="log" style="width:700;height:300;"></textarea>-->
 
-    <div class="footer">
-      Copyright(c)2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <a href="mailto:jjangg96@bitple.com">jjangg96</a>
-    </div>
+  <div class="footer">
+    Copyright(c)2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <a href="mailto:jjangg96@bitple.com">jjangg96</a>
+  </div>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-52447140-1', 'auto');
+    ga('require', 'linkid', 'linkid.js');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
+
+  </script>
   </body>
 </html>
