--- a/index.html
+++ b/index.html
@@ -28,91 +28,104 @@
     <link rel="apple-touch-icon" sizes="120x120" href="res/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="res/touch-icon-ipad-retina.png">
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="res/index.css">
     <link rel="stylesheet" type="text/css" href="res/addtohomescreen.css">
 
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="res/addtohomescreen.js"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="res/underscore.js"></script>
     <script type="text/javascript" src="res/moment-with-langs.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
     <script type="text/javascript" src="http://www.btckorea.org:8888/faye/client.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
     <script type="text/javascript" src="res/chart_data.js"></script>
     <script type="text/javascript" src="res/realtime-table.js"></script>
   </head>
   <body>
-    <a href="http://wp.me/P4fds6-1gR" target="_blank"><img class="top_banner" src="res/bitpremiers_event.jpg"></img></a>
-<!--
-    <center>
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-           style="display:inline-block;width:320px;height:50px"
-           data-ad-client="ca-pub-3851763399090942"
-           data-ad-slot="5156935109"></ins>
-      <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </center>
+    <div class="visible-xs-block"><a href="http://wp.me/P4fds6-1gR" target="_blank"><img class="center-block" src="res/bitpremiers_event.jpg" height="50"></img></a></div>
+  <!--
+<center>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+style="display:inline-block;width:320px;height:50px"
+data-ad-client="ca-pub-3851763399090942"
+data-ad-slot="5156935109"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</center>
 -->
 
-    <script type="text/javascript" src="res/chart.js"></script>
-    <div id="fb-root"></div>
-    <script>
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&appId=683455885058190&version=v2.0";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
+  <script type="text/javascript" src="res/chart.js"></script>
 
-    <div class="fb"><div class="fb-like" data-href="http://www.btckorea.org" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true" data-colorscheme="dark"></div></div>
-    <table id="min_max">
-      <thead>
-        <tr>
-          <td>최저가</td>
-          <td>최고가</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr></tr>
-      </tbody>
-    </table>
 
-    <table id="history">
-      <thead>
-        <tr>
-          <td>Time</td>
-          <td id="price">Last Price</td>
-          <td id="bitstamp">Bitstamp</td>
-          <td id="volume">Qty</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr id="list">
-        </tr>
-      </tbody>
 
-    </table>
-    <!--<textarea id="log" style="width:700;height:300;"></textarea>-->
+  <div id="fb-root"></div>
+  <script>
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&appId=683455885058190&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
 
-    <div class="footer">
-      Copyright(c)2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <a href="mailto:jjangg96@bitple.com">jjangg96</a>
-    </div>
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-52437842-1', 'auto');
-      ga('require', 'linkid', 'linkid.js');
-      ga('require', 'displayfeatures');
-      ga('send', 'pageview');
+  <div class="fb">
+    <button type="button" class="btn btn-info btn-xs" id="info-btn" data-toggle="popover" title="도움말" data-content="가격에 K는 Korbit, X는 Xcoin을 의미합니다. 모바일 환경에서 차트는 드래그로 이동, 더블 탭 드래그로 자세히 보기, 두 손가락으로 줌인/아웃입니다.">도움말</button>
+    <div class="fb-like" data-href="http://www.btckorea.org" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true" data-colorscheme="dark"></div>
+  </div>
+  <table id="min_max">
+    <thead>
+      <tr>
+        <td>최저가</td>
+        <td>최고가</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr></tr>
+    </tbody>
+  </table>
 
-    </script>
+  <table id="history" class="table table-hover">
+    <thead>
+      <tr>
+        <td>Time</td>
+        <td id="price">Last Price</td>
+        <td id="bitstamp">Bitstamp</td>
+        <td id="volume">Qty</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr id="list">
+      </tr>
+    </tbody>
+
+  </table>
+  <!--<textarea id="log" style="width:700;height:300;"></textarea>-->
+
+  <div class="footer">
+    <span class="glyphicon glyphicon-copyright-mark"></span> 2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <a href="mailto:jjangg96@bitple.com">jjangg96 <span class="glyphicon glyphicon-envelope"></span></a>
+  </div>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-52437842-1', 'auto');
+    ga('require', 'linkid', 'linkid.js');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
+
+  </script>
   </body>
 </html>
