--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<html>
+<html lang="en">
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <title>Hello, Korea!</title>
+    <!-- META-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">    
-
+    <meta name="author" content="Bitple jjangg96">
+    <meta name="keyword" content="비트코인,시세,한국비트코인,korbit,코빗,Xcoin,엑스코인,차트,bitstamp,실시간거래,모바일,채결가,거래량">
+    <meta name="description" content="최근 국내에서 거래된 비트코인 가격 목록과 실시간 차트를 볼 수 있습니다. 모바일 환경에 최적화 되어있습니다." >
     <meta property="og:site_name" content="www.btckorea.org">
     <meta property="og:title" content="비트코인 국내 거래소 실시간 차트 및 거래 기록">
     <meta property="og:image" content="https://dl.dropboxusercontent.com/u/5736215/btckorea.png">
@@ -14,27 +17,25 @@
     <meta property="og:url" content="http://www.btckorea.org">
     <meta property="og:type"   content="website" /> 
     <meta property="fb:app_id" content="683455885058190" /> 
-    <meta property="og:description" content="최근 국내에서 거래된 비트코인 가격 목록과 실시간 차트를 볼 수 있습니다. 모바일에서도 이용 가능합니다." >
-    <meta name="description" content="최근 국내에서 거래된 비트코인 가격 목록과 실시간 차트를 볼 수 있습니다. 모바일에서도 이용 가능합니다." >
+    <meta property="og:description" content="최근 국내에서 거래된 비트코인 가격 목록과 실시간 차트를 볼 수 있습니다. 모바일 환경에 최적화 되어있습니다." >
 
+    <!--Mobile-->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="실시간 한국거래소" />
-
+    <meta name="apple-mobile-web-app-title" content="실시간거래소" />
     <link rel="icon" type="image/png" href="res/favicon.png" /> 
     <link rel="apple-touch-icon" href="res/touch-icon-iphone.png">
     <link rel="apple-touch-icon" sizes="76x76" href="res/touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="120x120" href="res/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="res/touch-icon-ipad-retina.png">
 
-    <!-- Latest compiled and minified CSS -->
+    <!--Style Script -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="res/index.css">
     <link rel="stylesheet" type="text/css" href="res/addtohomescreen.css">
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="res/addtohomescreen.js"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js" charset="utf-8"></script>
@@ -42,10 +43,10 @@
     <script type="text/javascript" src="res/moment-with-langs.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
     <script type="text/javascript" src="http://www.btckorea.org:8888/faye/client.js"></script>
-
     <script type="text/javascript" src="res/chart_data.js"></script>
     <script type="text/javascript" src="res/realtime-table.js"></script>
   </head>
+
   <body>
     <div class="visible-xs-block"><a href="http://wp.me/P4fds6-1gR" target="_blank"><img class="center-block" src="res/bitpremiers_event.jpg" height="50"></img></a></div>
   <!--
@@ -75,8 +76,6 @@ data-ad-slot="5156935109"></ins>
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
   </script>
-
-
 
   <div class="fb">
     <button type="button" class="btn btn-info btn-xs" id="info-btn" data-toggle="popover" title="도움말" data-content="가격에 K는 Korbit, X는 Xcoin을 의미합니다. 모바일 환경에서 차트는 드래그로 이동, 더블 탭 드래그로 자세히 보기, 두 손가락으로 줌인/아웃입니다.">도움말</button>
@@ -115,6 +114,7 @@ data-ad-slot="5156935109"></ins>
     <span class="glyphicon glyphicon-copyright-mark"></span> 2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <a href="mailto:jjangg96@bitple.com">jjangg96 <span class="glyphicon glyphicon-envelope"></span></a>
   </div>
 
+  <!--Google Analytics  -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -122,7 +122,6 @@ data-ad-slot="5156935109"></ins>
                             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-52437842-1', 'auto');
-    ga('require', 'linkid', 'linkid.js');
     ga('require', 'displayfeatures');
     ga('send', 'pageview');
 
