--- a/index.html
+++ b/index.html
@@ -85,13 +85,12 @@ data-ad-slot="5156935109"></ins>
          <div class="fb-like" data-href="http://www.btckorea.org" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
          
         </div>
-        <div class="col-xs-2 col-xs-offset-6 info">
-<!--         <button type="button" class="btn btn-primary  btn-xs" id="info-btn" data-placement="down" data-toggle="popover" title="도움말" data-content="가격에 K는 Korbit, X는 Xcoin을 의미합니다. 모바일 환경에서 차트는 드래그로 이동, 더블 탭 드래그로 자세히 보기, 두 손가락으로 줌인/아웃입니다.">도움말</button> -->
-          <button type="button" class="btn btn-primary  btn-xs" id="info-modal" data-toggle="modal" data-target="#myModal">도움말!!!</button>
+        <div class="col-xs-3 col-xs-offset-5 info">
+          <button type="button" class="btn btn-primary btn-xs pull-right" id="info-btn" data-toggle="modal" data-target="#myModal">도움말</button>
         </div>
       </div>
       <div class="row visible-xs-block">
-        <a href="http://wp.me/P4fds6-1gR" target="_blank"><img height="50" src="/res/bitpremiers_event.jpg"></a>
+          <a href="http://wp.me/P4fds6-1gR" target="_blank"><img class="center-block" height="50" src="/res/bitpremiers_event.jpg"></a>
       </div>
 
       <div class="row">
@@ -118,7 +117,7 @@ data-ad-slot="5156935109"></ins>
 
         <div class="right up">
           <div class="hidden-xs">
-            <button type="button" class="btn btn-primary  btn-xs" id="info-modal" data-toggle="modal" data-target="#myModal">도움말!!!</button>
+            <button type="button" class="btn btn-primary  btn-xs" id="info-modal" data-toggle="modal" data-target="#myModal">도움말</button>
 
             <div class="pull_right">
               <div class="fb-like" data-href="http://www.btckorea.org" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
@@ -129,7 +128,7 @@ data-ad-slot="5156935109"></ins>
       </div>
 
       <div class="col-md-12 footer">
-        <span class="glyphicon glyphicon-copyright-mark"></span> 2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <a href="mailto:jjangg96@bitple.com">jjangg96 <span class="glyphicon glyphicon-envelope"></span></a>
+        <span class="glyphicon glyphicon-copyright-mark"></span> 2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <span class="glyphicon glyphicon-envelope"></span><a href="mailto:jjangg96@bitple.com">jjangg96</a>
       </div>
     </div>
 
