change meta data change bottom info

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
-    <title>Hello, Korea!</title>
+    <title>비트코인(Bitcoin) 국내 거래소 실시간 차트 및 거래 기록</title>
     <!-- META-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">    
     <meta name="author" content="Bitple jjangg96">
-    <meta name="keyword" content="비트코인,시세,한국비트코인,korbit,코빗,Xcoin,엑스코인,차트,bitstamp,실시간거래,모바일,채결가,거래량">
+    <meta name="keyword" content="비트코인,bitcoin,시세,한국비트코인,korbit,코빗,Xcoin,엑스코인,차트,chart,bitstamp,실시간거래,모바일,채결가,거래량">
     <meta name="description" content="최근 국내에서 거래된 비트코인 가격 목록과 실시간 차트를 볼 수 있습니다. 모바일 환경에 최적화 되어있습니다." >
     <meta property="og:site_name" content="www.btckorea.org">
     <meta property="og:title" content="비트코인 국내 거래소 실시간 차트 및 거래 기록">
@@ -128,7 +128,7 @@ data-ad-slot="5156935109"></ins>
       </div>
 
       <div class="col-md-12 footer">
-        <span class="glyphicon glyphicon-copyright-mark"></span> 2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <span class="glyphicon glyphicon-envelope"></span><a href="mailto:jjangg96@bitple.com">jjangg96</a>
+        <span class="glyphicon glyphicon-copyright-mark"></span> 2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <span class="glyphicon glyphicon-envelope"></span><a href="mailto:jjangg96@bitple.com"> jjangg96</a>
       </div>
     </div>
 
