new chart added

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@ data-ad-slot="5156935109"></ins>
       <div class="row">
         <div class="chart">
         </div>
+        <div class="button">
+          <a href='javascript:;' onclick='change_graph_type(0, this);' class='disable' id='graph_type'>1M</a>
+          <a href='javascript:;' onclick='change_graph_type(1, this);' class='disable' id='graph_type'>5M</a>
+          <a href='javascript:;' onclick='change_graph_type(2, this);' class='enable' id='graph_type'>15M</a>
+          <a href='javascript:;' onclick='change_graph_type(3, this);' class='disable' id='graph_type'>1H</a>
+        </div>
       </div>
       <div class="row visible-xs-block">
        <div class="col-xs-4 info">
@@ -128,7 +134,7 @@ data-ad-slot="5156935109"></ins>
       </div>
 
       <div class="col-md-12 footer">
-        <span class="glyphicon glyphicon-copyright-mark"></span> 2014 <a href="http://www.bitple.co.kr" target="_blank">Bitple</a>, <span class="glyphicon glyphicon-envelope"></span><a href="mailto:jjangg96@bitple.com"> jjangg96</a>
+        <span class="glyphicon glyphicon-copyright-mark"></span> 2014 <a href="http://www.bitple.co.kr" target="_blank" class="white">Bitple</a>, <span class="glyphicon glyphicon-envelope"></span><a href="mailto:jjangg96@bitple.com" class="white"> jjangg96</a>
       </div>
     </div>
 
