change to minified js

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <script type="text/javascript" src="res/moment-with-langs.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
     <script type="text/javascript" src="http://www.btckorea.org:8888/faye/client.js"></script>
-    <script type="text/javascript" src="res/chart_data.js"></script>
-    <script type="text/javascript" src="res/realtime-table.js"></script>
+    <script type="text/javascript" src="res/chart_data.min.js"></script>
+    <script type="text/javascript" src="res/realtime-table.min.js"></script>
   </head>
 
   <body>
@@ -175,6 +175,6 @@ data-ad-slot="5156935109"></ins>
       ga('send', 'pageview');
 
     </script>
-    <script type="text/javascript" src="res/chart.js"></script>
+    <script type="text/javascript" src="res/chart.min.js"></script>
   </body>
 </html>
