필요없는 클래스 삭제

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
       <div class="row visible-xs-block">
         <center>
           <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <ins class="adsbygoogle center-block"
+          <!-- btckorea -->
+          <ins class="adsbygoogle"
                style="display:inline-block;width:320px;height:50px"
                data-ad-client="ca-pub-3851763399090942"
                data-ad-slot="5156935109"></ins>
