stalk to spot.im

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     </script>
     <script type="text/javascript" src="res/chart.min.js"></script>
-    <script src="http://www.stalk.io/stalk.js"></script>
-    <script>STALK.init();</script>
+    <div id="spot-im-root"></div><script>!function(t,e,o){function p(){var t=e.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==e.location.protocol?"https":"http")+":"+o,e.body.appendChild(t)}t.spotId="fcf780d10cb9450446100f4e8217affb",t.spotName="lobby",t.allowDesktop=!0,t.allowMobile=!0,t.containerId="spot-im-root",p()}(window.SPOTIM={},document,"//www.spot.im/embed/scripts/launcher.js");</script>
+
   </body>
 </html>
