--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </div>
 
       <div class="col-md-12 footer">
-        <a href="bitcoin:1HSSJFLikzoL3ffzDHxyWpFSmvE4BuDemh" target="_blank" class="white">Donation : 1HSSJFLikzoL3ffzDHxyWpFSmvE4BuDemh</a>, <span class="glyphicon glyphicon-envelope"></span><a href="mailto:jjangg96@bitple.com" class="white"> jjangg96</a>
+        <a href="bitcoin:1HSSJFLikzoL3ffzDHxyWpFSmvE4BuDemh" target="_blank" class="white">Donation : 1HSSJFLikzoL3ffzDHxyWpFSmvE4BuDemh</a>, <span class="glyphicon glyphicon-envelope"></span><a href="mailto:jjangg96@gmail.com" class="white"> jjangg96</a>
       </div>
     </div>
 
