채굴 사이트 숨김

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
             <ul class="nav navbar-nav">
-              <li class="{{? it.selected === 'stats' }}pure-menu-selected{{?}}">
+              <!-- <li class="{{? it.selected === 'stats' }}pure-menu-selected{{?}}">
                 <a href="http://mining.btckorea.org" target="_blank">
                   <i class="fa fa-cubes"></i>&nbsp;채굴연합
                 </a>
-              </li>
+              </li> -->
               <li class="{{? it.selected === 'tbs' }}pure-menu-selected{{?}}">
                 <a href="http://www.bitple.co.kr" target="_blank">
                   <i class="fa fa-calculator"></i>&nbsp;Bitstamp 모의투자
