--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </table>
           <table id="history" class="table table-hover table-condensed">
             <thead>
-              <tr><td>Time</td><td id="price">Last Price</td><td id="bitstamp">Bitstamp</td><td id="volume">Qty</td></tr>
+              <tr><td>Time</td><td id="price">Last Price</td><td id="okcoin">Okcoin</td><td id="volume">Qty</td></tr>
             </thead>
             <tbody>
               <tr id="list">
